--- a/app/src/main/res/layout/activity_support_groups.xml
+++ b/app/src/main/res/layout/activity_support_groups.xml
@@ -57,7 +57,7 @@
                     android:layout_marginBottom="14dp"
                     android:layout_marginTop="10dp"
                     android:layout_weight="1"
-                    android:onClick="institution"
+                    android:onClick="events"
                     android:src="@drawable/ic_today" />
 
 
