--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="colorBlackTrans">#a0000000</color>
 
     <color name="colorTitle">#ffffff</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
